--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
         <nav class="mobile-menu-nav">
           <ul class="mobile-menu-list">
             <li class="mobile-menu-item">
-              <a class="mobile-menu-link" href="./index.html">Studio</a>
+              <a class="mobile-menu-link part" href="./index.html">Studio</a>
             </li>
             <li class="mobile-menu-item">
               <a class="mobile-menu-link" href="">Portfolio</a>
@@ -691,7 +691,9 @@
           <address class="mobile-menu-address">
             <ul class="mobile-menu-address-list">
               <li class="mobile-menu-address-item">
-                <a class="mobile-menu-address-text" href="tel:+110001111111"
+                <a
+                  class="mobile-menu-address-text part"
+                  href="tel:+110001111111"
                   >+11 (000) 111-11-11</a
                 >
               </li>
